# dexpr

./: .gitignore  LICENSE  README.md  cal.py  date.py  magic.py  pyproject.toml  tenor.py  test_date.py  test_magic.py
dexpr/: __init__.py  dataclassex.py  dgen.py  dimension.py  exprclass.py  magic.py  quantity.py  unit.py
expressions/: __init__.py  calendar.py  dataclassex.py  dgen.py  magic.py  tenor.py
test_dexpr/: test_calendar.py  test_dataclassex.py  test_dgen.py  test_dimension.py  test_magic.py  test_units.py
test_expressions/: test_dataclassex.py  test_dgen.py  test_magic.py
